security/disallow-runasroot.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-runasroot
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: check-runasroot
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Running as root is not allowed. Pods must set securityContext.runAsUser > 0."
        pattern:
          spec:
            containers:
              - (securityContext):
                  (runAsUser): ">0"
